[tool.poetry]
name = "tempuslabra"
version = "0.1.0"
description = ""
authors = ["Rogelho Junior <rogelho455@gmail.com>"]
repository = "https://github.com/rogelhojunior/tempuslabra"
packages = [{include = "tempuslabra"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
