[tool.poetry]
name = "tempuslabra"
version = "0.1.0"
description = ""
authors = ["Rogelho Junior <rogelho455@gmail.com>"]
repository = "https://github.com/rogelhojunior/tempuslabra"
packages = [{include = "tempuslabra"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
freezegun = "^1.3.1"
coverage = "^7.3.2"
ruff = "^0.1.7"
sourcery = "^1.14.0"
python-i18n = {git = "git@github.com:rogelhojunior/python-i18n.git"}
num2words = "^0.5.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
